@@ -501,8 +501,9 @@ Size=20x4
 #LineAddress=0x10
 
 # Character map to to map ISO-8859-1 to the LCD's character set
-# [default: hd44780_default; legal: hd44780_default, hd44780_euro,
-#  ea_ks0073, sed1278f_0b, hd44780_koi8_r, upd16314 ]
+# [default: hd44780_default; legal: hd44780_default, hd44780_euro, ea_ks0073,
+# sed1278f_0b, (hd44780_koi8_r, hd44780_cp1251, hd44780_8859_5, upd16314 if
+# compiled with additional charmaps)]
 CharMap=hd44780_default
 
 # If your display is slow and cannot keep up with the flow of data from
@@ -574,7 +575,8 @@ Device=/dev/lcd0
 Size=16x2
 
 # Character map to to map ISO-8859-1 to the displays character set.
-# [default: none; legal: none, hd44780_euro, upd16314, hd44780_koi8_r]
+# [default: none; legal: none, hd44780_euro, (upd16314, hd44780_koi8_r,
+# hd44780_cp1251, hd44780_8859_5 if compiled with additional charmaps)]
 CharMap=hd44780_euro
 
 ## Soundgraph iMON LCD ##
