@@ -2853,11 +2853,14 @@ This can be done by specifying <option>--enable-drivers=all</option> or by inclu
       <parameter><literal>ea_ks0073</literal></parameter> |
       <parameter><literal>sed12780f_0b</literal></parameter> |
       <parameter><literal>hd44780_koi8_r</literal></parameter> |
+      <parameter><literal>hd44780_cp1251</literal></parameter> |
+      <parameter><literal>hd44780_8859_5</literal></parameter> |
       <parameter><literal>upd16314</literal></parameter> |
       <parameter><literal>none</literal></parameter>
     }
   </term>
-  <listitem><para>
+  <listitem>
+    <para>
       Set the character mapping depending on the display you have:
       <itemizedlist>
         <listitem><para>
@@ -2878,17 +2881,6 @@ This can be done by specifying <option>--enable-drivers=all</option> or by inclu
           <literal>sed12780f_0b</literal> is for some SED 1278 displays.
         </para></listitem>
         <listitem><para>
-          <literal>hd44780_koi8_r</literal> maps input from a client in
-          Russian KOI8-R to displays with a ROM mask supporting the european
-          charset (ROM code A02).
-        </para></listitem>
-        <listitem><para>
-          <literal>upd16314</literal> is for displays with a Nec uPD16314
-          vacuum fluorescent display (VFD) controller with ROM code 002
-          character set. If your display has ROM code 001 character set you
-          may use the <literal>hd44780_euro</literal> charmap instead.
-        </para></listitem>
-        <listitem><para>
           The <literal>none</literal> charmap does not translate any characters.
           It displays the characters the display controllers actually has
           stored in its CGROM for that position instead. This setting is
@@ -2897,15 +2889,42 @@ This can be done by specifying <option>--enable-drivers=all</option> or by inclu
       </itemizedlist>
       You only need to set this parameter if you have a non-standard
       HD44780 display or charmap.
-
-      <tip>
-        <para>
-        See <filename>server/drivers/hd44780-charset.h</filename>
-        in <package>LCDproc</package>'s source directory for the actual
-        mappings.
-        </para>
-      </tip>
-  </para></listitem>
+    </para>
+    <para>
+      If LCDproc was configured with '--enable-extra-charmaps' option the
+      following character mappings are available, too:
+      <itemizedlist>
+        <listitem><para>
+          <literal>hd44780_koi8_r</literal> maps input from a client in
+          Russian KOI8-R to displays with a ROM mask supporting the european
+          charset (ROM code A02).
+        </para></listitem>
+        <listitem><para>
+          <literal>hd44780_cp1251</literal> maps input from a client in
+          Russian CP1251 (Windows-1251) to displays with a ROM mask supporting
+          the european charset (ROM code A02).
+        </para></listitem>
+        <listitem><para>
+          <literal>hd44780_8859_5</literal>  maps input from a client in
+          Russian ISO 8859-5 to displays with a ROM mask supporting the european
+          charset (ROM code A02).
+        </para></listitem>
+        <listitem><para>
+          <literal>upd16314</literal> is for displays with a Nec uPD16314
+          vacuum fluorescent display (VFD) controller with ROM code 002
+          character set. If your display has ROM code 001 character set you
+          may use the <literal>hd44780_euro</literal> charmap instead.
+        </para></listitem>
+      </itemizedlist>
+    </para>
+    <tip>
+      <para>
+      See <filename>server/drivers/hd44780-charset.h</filename>
+      in <package>LCDproc</package>'s source directory for the actual
+      mappings.
+      </para>
+    </tip>
+  </listitem>
 </varlistentry>
 
 <varlistentry>
