@@ -279,6 +279,7 @@ const unsigned char SED1278F_0B_charmap[] = {
         175, 151, 163, 150, 129, 121,  32, 253
 };
 
+#ifdef EXTRA_CHARMAPS
 /*
  * Table for HD44780 controller with ROM mask supporting
  * the european charset (ROM code A02).
@@ -326,6 +327,104 @@ const unsigned char HD44780_KOI8R_charmap[] = {
          88, 132, 133,  75, 134,  77,  72,  79,       /* Х И Й К Л М Н О */
         135, 173,  80,  67,  84, 136, 130,  66,       /* П Я Р С Т У Ж В */
          98, 142, 131, 139, 143, 140, 138, 141        /* Ь Ы З Ш Э Щ Ч Ъ */
+};
+
+/*
+ * Table for HD44780 controller with ROM mask supporting
+ * the european charset (ROM code A02).
+ *
+ * Russian CP-1251 codepage as input
+ */
+const unsigned char HD44780_CP1251_charmap[] = {
+        /* #0 */
+          0,   1,   2,   3,   4,   5,   6,   7,
+          8,   9,  10,  11,  12,  13,  14,  15,
+         16,  17,  18,  19,  20,  21,  22,  23,
+         24,  25,  26,  27,  28,  29,  30,  31,
+        /* #32 */
+         32,  33,  34,  35,  36,  37,  38,  39,
+         40,  41,  42,  43,  44,  45,  46,  47,
+         48,  49,  50,  51,  52,  53,  54,  55,
+         56,  57,  58,  59,  60,  61,  62,  63,
+        /* #64 */
+         64,  65,  66,  67,  68,  69,  70,  71,
+         72,  73,  74,  75,  76,  77,  78,  79,
+         80,  81,  82,  83,  84,  85,  86,  87,
+         88,  89,  90,  91,  47,  93,  94,  95,
+        /* #96 */
+         96,  97,  98,  99, 100, 101, 102, 103,
+        104, 105, 106, 107, 108, 109, 110, 111,
+        112, 113, 114, 115, 116, 117, 118, 119,
+        120, 121, 122, 123, 124, 125, 126, 127,
+        /* #128 */
+        141, 146,  44, 146,  34,  95,  43,  35,       /* Ђ Ѓ ‚ ѓ „ … † ‡ */
+        158,  37, 134,  60,  72,  75,  72, 137,       /* € ‰ Љ ‹ Њ Ќ Ћ Џ */
+        144, 145, 146, 147, 148, 149, 150, 151,
+        152,  84, 156,  62, 156, 157, 158, 159,       /*   ™   ›         */
+        /* #160 */
+        160, 161, 162, 163, 164, 165, 124, 167,       /*         ¤   ¦ § */
+        203, 169,  69, 171,  32,  32, 174, 207,       /* Ё © Є «     ® Ї */
+        176, 177, 178, 179, 180, 181, 182, 183,       /* ° ±       µ ¶ · */
+        203,  78,  69, 187, 188, 189, 190, 207,       /* ё № є »       ї */
+        /* #192 */
+         65, 128,  66, 146, 129,  69, 130, 131,       /* А Б В Г Д Е Ж З */
+        132, 133,  75, 134,  77,  72,  79, 135,       /* И Й К Л М Н О П */
+         80,  67,  84, 136, 216,  88, 137, 138,       /* Р С Т У Ф Х Ц Ч */
+        139, 140, 141, 142,  98, 143, 172, 173,       /* Ш Щ Ъ Ы Ь Э Ю Я */
+        /* #224 */
+         65, 128,  66, 146, 129,  69, 130, 131,       /* а б в г д е ж з */
+        132, 133,  75, 134,  77,  72,  79, 135,       /* и й к л м н о п */
+         80,  67,  84, 136, 216,  88, 137, 138,       /* р с т у ф х ц ч */
+        139, 140, 141, 142,  98, 143, 172, 173        /* ш щ ъ ы ь э ю я */
+};
+
+/*
+ * Table for HD44780 controller with ROM mask supporting
+ * the european charset (ROM code A02).
+ *
+ * Russian ISO 8859-5 codepage as input
+ */
+const unsigned char HD44780_ISO_8859_5_charmap[] = {
+        /* #0 */
+          0,   1,   2,   3,   4,   5,   6,   7,
+          8,   9,  10,  11,  12,  13,  14,  15,
+         16,  17,  18,  19,  20,  21,  22,  23,
+         24,  25,  26,  27,  28,  29,  30,  31,
+        /* #32 */
+         32,  33,  34,  35,  36,  37,  38,  39,
+         40,  41,  42,  43,  44,  45,  46,  47,
+         48,  49,  50,  51,  52,  53,  54,  55,
+         56,  57,  58,  59,  60,  61,  62,  63,
+        /* #64 */
+         64,  65,  66,  67,  68,  69,  70,  71,
+         72,  73,  74,  75,  76,  77,  78,  79,
+         80,  81,  82,  83,  84,  85,  86,  87,
+         88,  89,  90,  91,  47,  93,  94,  95,
+        /* #96 */
+         96,  97,  98,  99, 100, 101, 102, 103,
+        104, 105, 106, 107, 108, 109, 110, 111,
+        112, 113, 114, 115, 116, 117, 118, 119,
+        120, 121, 122, 123, 124, 125, 126, 127,
+        /* #128 */
+        128, 129, 130, 131, 132, 133, 134, 135,
+        136, 137, 138, 139, 140, 141, 142, 143,
+        144, 145, 146, 147, 148, 149, 150, 151,
+        152, 153, 154, 155, 156, 157, 158, 159,
+        /* #160 */
+        160, 203, 162, 163, 164, 165, 166, 167,       /*   Ё             */
+        168, 169, 170, 171, 172, 173, 174, 175,
+         65, 128,  66, 146, 129,  69, 130, 131,       /* А Б В Г Д Е Ж З */
+        132, 133,  75, 134,  77,  72,  79, 135,       /* И Й К Л М Н О П */
+        /* #192 */
+         80,  67,  84, 136, 216,  88, 137, 138,       /* Р С Т У Ф Х Ц Ч */
+        139, 140, 141, 142,  98, 143, 172, 173,       /* Ш Щ Ъ Ы Ь Э Ю Я */
+         65, 128,  66, 146, 129,  69, 130, 131,       /* а б в г д е ж з */
+        132, 133,  75, 134,  77,  72,  79, 135,       /* и й к л м н о п */
+        /* #224 */
+         80,  67,  84, 136, 216,  88, 137, 138,       /* р с т у ф х ц ч */
+        139, 140, 141, 142,  98, 143, 172, 173,       /* ш щ ъ ы ь э ю я */
+         78, 203, 242, 243, 244, 245, 246, 247,       /* № ё             */
+        248, 249, 250, 251, 252, 167, 254, 255        /*           §     */
 };
 
 /*
@@ -380,6 +479,7 @@ const unsigned char uPD16314_charmap[] = {
         111, 238, 111, 111, 111, 111, 135, 253,
         137, 117, 117, 117, 139, 121, 240, 255
 };
+#endif  /* EXTRA_CHARMAPS */
 
 #define MAX_CHARMAP_NAME_LENGTH 16
 
@@ -390,13 +490,18 @@ struct charmap {
 
 /** List of available character mappings. This list is sorted by relevance! */
 const struct charmap available_charmaps[] = {
-	{ "hd44780_default", HD44780_charmap      },
-	{ "hd44780_euro",    HD44780_euro_charmap },
-	{ "hd44780_koi8_r",  HD44780_KOI8R_charmap},
-	{ "ea_ks0073",       EA_KS0073_charmap    },
-	{ "sed1278f_0b",     SED1278F_0B_charmap  },
-	{ "upd16314",        uPD16314_charmap     },
-	{ "none",            none_charmap         }
+	{ "hd44780_default", HD44780_charmap           },
+	{ "hd44780_euro",    HD44780_euro_charmap      },
+	{ "ea_ks0073",       EA_KS0073_charmap         },
+	{ "sed1278f_0b",     SED1278F_0B_charmap       },
+#ifdef EXTRA_CHARMAPS
+	{ "hd44780_koi8_r",  HD44780_KOI8R_charmap     },
+	{ "hd44780_cp1251",  HD44780_CP1251_charmap    },
+	{ "hd44780_8859_5",  HD44780_ISO_8859_5_charmap},
+	{ "upd16314",        uPD16314_charmap          },
+#endif
+	/* This is the last entry. */
+	{ "none",            none_charmap              }
 };
 
 /**
